@@ -1,3 +1,9 @@
+2007-11-06  Bastien Nocera  <hadess@hadess.net>
+
+	* src/plparse/totem-pl-parser-podcast.c:
+	(totem_pl_parser_add_xml_feed): Implement, fixes parsing
+	of feeds from Feedburner.com (see #484768)
+
 2007-11-05  Bastien Nocera  <hadess@hadess.net>
 
 	* configure.in:
